# claude-code-telegram-agent-bot

./: .gitignore  AGENTS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  INSTALLATION.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: agent.py  bot.py  commands.py  logs.py  permissions.py  reactions.py  streaming.py  transcribe.py  uploads.py
src/config/: __init__.py  config.example.json
src/handlers/: __init__.py  basic.py  context.py  custom.py  plan.py  selectors.py  text.py  uploads.py  voice.py
src/i18n/: __init__.py  ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  ja.json  ko.json  mr.json  pt.json  ru.json  sw.json  ta.json  te.json  tr.json  ur.json  vi.json  zh.json
src/infra/: agent.py  commands.py  logs.py  streaming.py
src/infra/interactions/: __init__.py  ask_user_question.py  gate.py  permission_prompt.py  plan_mode.py  push_notification.py
src/services/: transcribe.py  upload_store.py
src/ui/: agent_reply.py  album.py  markdown.py  middleware.py  plan_router.py  reactions.py  sdk_views.py  tool_status.py
tests/: conftest.py  test_bot_factories.py  test_commands.py  test_config.py  test_i18n.py  test_logs.py  test_markdown.py  test_plan_router.py  test_reactions.py  test_sdk_views.py  test_streaming.py  test_uploads.py
